const_typed_builder_test/compile_fail/group_1.stderr
error: cannot find attribute `build` in this scope
 --> ./compile_fail/group_1.rs:7:7
  |
7 |     #[build(solver = brute_force)]
  |       ^^^^^

error[E0599]: no method named `build` found for struct `FooBuilder` in the current scope
  --> ./compile_fail/group_1.rs:12:62
   |
5  |     #[derive(Debug, Default, PartialEq, Eq, Builder)]
   |                                             ------- method `build` not found for this struct
...
12 |     let foo = Foo::builder().bar("Hello world!".to_string()).build();
   |                                                              ^^^^^ method not found in `FooBuilder<true>`
